Closed
Bug 810824
Opened 13 years ago
Closed 13 years ago
BaselineCompiler: Make frame iteration work
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Assigned: jandem)
References
Details
Attachments
(1 file)
|
7.69 KB,
patch
|
djvj
:
review+
nbp
:
feedback+
|
Details | Diff | Splinter Review |
With the attached patch GetPcScript/cx->stack.currentScript() and js_Dumpbacktrace (StackIter) work. There may be some other places that need updating, but we can fix these when they show up.
Attachment #680607 -
Flags: review?(kvijayan)
Updated•13 years ago
|
Attachment #680607 -
Flags: review?(kvijayan) → review+
Comment 1•13 years ago
|
||
Comment on attachment 680607 [details] [diff] [review]
Patch
Review of attachment 680607 [details] [diff] [review]:
-----------------------------------------------------------------
In addition, I will recommend you to specialize the IonFrameIterator::dump function, which is extremely useful to have especially at the beginning of the project.
Attachment #680607 -
Flags: feedback+
| Assignee | ||
Comment 2•13 years ago
|
||
https://hg.mozilla.org/projects/ionmonkey/rev/9af743a5b908
("dump" patch in bug 810946)
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•