Bug 810824 - Fix frame iteration to handle baseline frames. r=djvj